fix left overflow in pagination when there are thousands of pages

--- a/inst/app/www/streetnamer_dt.css
+++ b/inst/app/www/streetnamer_dt.css
@@ -7,3 +7,7 @@
     background-color: #ff5454 !important;
     color: white !important;
 }
+
+.pagination {
+  text-size: 11px;
+}
